tests/negative/neg_pr113_string_discriminant.safe
package Neg_PR113_String_Discriminant
   type Packet (Label : String) is
      record
         Value : Integer;

